<resources>
    <string name="app_name">FriendshipRoyale</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="newGame">New Game</string>
    <string name="about">About</string>
    <string name="submit">Submit</string>
    <string name="cont">Continue</string>
    <string name="inventoryName">%1$s\'s Inventory</string>
    <string name="inventory">Inventory</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="assign_your_stats_below">Assign your stats below</string>
    <string name="strength_0">Strength: 0</string>
    <string name="intellect_0">Intellect: 0</string>
    <string name="charisma_0">Charisma: 0</string>
    <string name="skill_0">Skill: 0</string>
    <string name="items">Items</string>
    <string name="weapons">Weapons</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attack">Attack</string>
    <string name="parley">Parley</string>
    <string name="hide">Hide</string>
    <string name="item">Item</string>

    <string name="melee">Melee</string>
    <string name="shoot">Shoot</string>
    <string name="run">Run</string>


    <string name="title_activity_main2">Main2Activity</string>

</resources>
