<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="20sp"
        android:layout_marginTop="20sp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/inventoryName"
        />

    <TextView
        android:id="@+id/strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameText"
        android:layout_marginTop="20dp"
        android:text="@string/strength_0" />
    <TextView
        android:id="@+id/intellect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/strength"
        android:layout_marginTop="10dp"
        android:text="@string/intellect_0" />
    <TextView
        android:id="@+id/charisma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/intellect"
        android:layout_marginTop="10dp"
        android:text="@string/charisma_0" />
    <TextView
        android:id="@+id/skill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/charisma"
        android:layout_marginTop="10dp"
        android:text="@string/skill_0" />



</RelativeLayout>