<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <TextView
        android:text="@string/app_name"
        android:layout_above="@+id/buttonNewGame"
        android:layout_height="30dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="22dp"
        />

    <Button
        android:id="@+id/buttonNewGame"
        android:text="@string/newGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSubmit"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/buttonSubmit"
        android:text= "@string/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>